Added autoheader support
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@65 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/applications/nas/Makefile.in
+++ b/cplusplus/applications/nas/Makefile.in
@@ -43,6 +43,7 @@ am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
+CONFIG_HEADER = $(top_builddir)/include/config.h
 CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(sysconfdir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
@@ -61,7 +62,7 @@ nasd_DEPENDENCIES = $(top_srcdir)/libpana/libpana.la \
 	$(top_srcdir)/libdiameternasreq/libdiameternasreq.la \
 	$(top_srcdir)/libdiametereap/libdiametereap.la \
 	$(top_srcdir)/libodutl/libodutl.la
-DEFAULT_INCLUDES = -I. -I$(srcdir)
+DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/include
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
