--- a/cplusplus/configure.in
+++ b/cplusplus/configure.in
@@ -103,6 +103,22 @@ case $host in
      AC_MSG_ERROR([Unsupported OS]); 
 esac
 
+# Default definitions for global macros
+AC_DEFINE_UNQUOTED([AAA_FSM_EVENT_DEBUG], [0], [Diameter peer fsm debugging])
+AC_DEFINE_UNQUOTED([AAA_SESSION_DEBUG], [0], [Diameter generic session fsm debugging])
+AC_DEFINE_UNQUOTED([AAA_SESSION_AUTH_DEBUG], [0], [Diameter auth session fsm debugging])
+AC_DEFINE_UNQUOTED([AAA_SESSION_ACCT_DEBUG], [0], [Diameter acct session fsm debugging])
+AC_DEFINE_UNQUOTED([AAA_ROUTE_DEBUG], [0], [Diameter router debugging])
+AC_DEFINE_UNQUOTED([AAA_XML_DEBUG], [0], [Diameter XML config loader debugging])
+AC_DEFINE_UNQUOTED([PANA_DEBUG], [0], [PANA debugging flag])
+AC_DEFINE_UNQUOTED([PANA_SA_DEBUG], [0], [PANA key generator debugging flag])
+
+# PANA cookie debugging flag 
+AC_DEFINE_UNQUOTED([PANA_COOKIE_DEBUG], [0], [PANA cookie debugging flag])
+
+# PANA dhcp key generator debugging flag 
+AC_DEFINE_UNQUOTED([PANA_DHCP_DEBUG], [0], [PANA dhcp key generator debugging flag])
+
 # Standard libraries for distribution
 AC_CONFIG_FILES([Makefile
                  libodutl/Makefile               
