--- a/cplusplus/libdiametereap/Makefile.in
+++ b/cplusplus/libdiametereap/Makefile.in
@@ -51,7 +51,6 @@ am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
-CONFIG_HEADER = $(top_builddir)/include/config.h
 CONFIG_CLEAN_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -126,7 +125,7 @@ server_test_tls_LDADD = $(LDADD)
 @compile_EAPTLS_TRUE@	$(top_srcdir)/libeap/libeap.la \
 @compile_EAPTLS_TRUE@	$(top_srcdir)/libeap/libeaptls.la \
 @compile_EAPTLS_TRUE@	$(top_srcdir)/libodutl/libodutl.la
-DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/include
+DEFAULT_INCLUDES = -I. -I$(srcdir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
