--- a/cplusplus/libdiamparser/Makefile.in
+++ b/cplusplus/libdiamparser/Makefile.in
@@ -61,12 +61,12 @@ libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libdiamparser_la_LIBADD =
 am__dirstamp = $(am__leading_dot)dirstamp
-am__objects_1 = src/aaa_avplist.lo src/aaa_q_avplist.lo \
-	src/aaa_comlist.lo src/aaa_g_avplist.lo src/aaa_parser.lo \
-	src/aaa_parser_avp.lo src/aaa_avp_header.lo \
-	src/aaa_error_status.lo src/aaa_parser_q_avplist.lo \
-	src/aaa_xml_parsing.lo src/aaa_memory_manager.lo \
-	src/aaa_parser_avpvalue.lo src/aaa_msg_to_xml.lo
+am__objects_1 = src/aaa_avplist.lo src/aaa_comlist.lo \
+	src/aaa_g_avplist.lo src/aaa_parser.lo src/aaa_parser_avp.lo \
+	src/aaa_avp_header.lo src/aaa_error_status.lo \
+	src/aaa_parser_q_avplist.lo src/aaa_xml_parsing.lo \
+	src/aaa_memory_manager.lo src/aaa_parser_avpvalue.lo \
+	src/aaa_msg_to_xml.lo
 am__objects_2 =
 am_libdiamparser_la_OBJECTS = $(am__objects_1) $(am__objects_2)
 libdiamparser_la_OBJECTS = $(am_libdiamparser_la_OBJECTS)
@@ -154,7 +154,6 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 F77 = @F77@
 FFLAGS = @FFLAGS@
-GREP = @GREP@
 HOST_OS = @HOST_OS@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -189,9 +188,12 @@ SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
 VERSION = @VERSION@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_F77 = @ac_ct_F77@
+ac_ct_RANLIB = @ac_ct_RANLIB@
+ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -210,30 +212,23 @@ build_vendor = @build_vendor@
 compile_EAPTLS_FALSE = @compile_EAPTLS_FALSE@
 compile_EAPTLS_TRUE = @compile_EAPTLS_TRUE@
 datadir = @datadir@
-datarootdir = @datarootdir@
-docdir = @docdir@
-dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
-htmldir = @htmldir@
 includedir = $(prefix)/include/opendiameter/parser
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
-localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
-pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
-psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = $(prefix)/etc/opendiameter/diameter
@@ -245,7 +240,6 @@ AM_CPPFLAGS = @L_CPPFLAGS@ \
 
 AM_LDFLAGS = @L_LDFLAGS@
 PARSER_SRC = src/aaa_avplist.cxx \
-             src/aaa_q_avplist.cxx \
 	     src/aaa_comlist.cxx \
 	     src/aaa_g_avplist.cxx \
              src/aaa_parser.cxx \
@@ -260,7 +254,6 @@ PARSER_SRC = src/aaa_avplist.cxx \
 
 PARSER_HDR = include/aaa_parser_avp.h \
              include/aaa_parser_avpvalue.h \
-	     include/aaa_parser.h \
              include/aaa_avp_header.h \
 	     include/aaa_comlist.h \
 	     include/aaa_error_status.h \
@@ -356,8 +349,6 @@ src/$(DEPDIR)/$(am__dirstamp):
 	@$(mkdir_p) src/$(DEPDIR)
 	@: > src/$(DEPDIR)/$(am__dirstamp)
 src/aaa_avplist.lo: src/$(am__dirstamp) src/$(DEPDIR)/$(am__dirstamp)
-src/aaa_q_avplist.lo: src/$(am__dirstamp) \
-	src/$(DEPDIR)/$(am__dirstamp)
 src/aaa_comlist.lo: src/$(am__dirstamp) src/$(DEPDIR)/$(am__dirstamp)
 src/aaa_g_avplist.lo: src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
@@ -441,8 +432,6 @@ mostlyclean-compile:
 	-rm -f src/aaa_parser_avpvalue.lo
 	-rm -f src/aaa_parser_q_avplist.$(OBJEXT)
 	-rm -f src/aaa_parser_q_avplist.lo
-	-rm -f src/aaa_q_avplist.$(OBJEXT)
-	-rm -f src/aaa_q_avplist.lo
 	-rm -f src/aaa_xml_parsing.$(OBJEXT)
 	-rm -f src/aaa_xml_parsing.lo
 	-rm -f test/aaa_test1.$(OBJEXT)
@@ -464,7 +453,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/aaa_parser_avp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/aaa_parser_avpvalue.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/aaa_parser_q_avplist.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/aaa_q_avplist.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/aaa_xml_parsing.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@test/$(DEPDIR)/aaa_test1.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@test/$(DEPDIR)/aaa_test2.Po@am__quote@
