More cleanup on group and command list classes
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@146 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/libdiamparser/Makefile.am
+++ b/cplusplus/libdiamparser/Makefile.am
@@ -10,7 +10,7 @@ AM_CPPFLAGS = @L_CPPFLAGS@ \
 AM_LDFLAGS = @L_LDFLAGS@
 
 PARSER_SRC = src/aaa_avplist.cxx \
-	     src/aaa_comlist.cxx \
+	     src/aaa_dict_mngr.cxx \
              src/aaa_parser.cxx \
 	     src/aaa_parser_avp.cxx \
 	     src/aaa_avp_header.cxx \
