--- a/cplusplus/libpana/Makefile.in
+++ b/cplusplus/libpana/Makefile.in
@@ -62,31 +62,29 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 libpana_la_LIBADD =
 am__dirstamp = $(am__leading_dot)dirstamp
 am__objects_1 = src/pana_parser.lo src/pana_parser_avpvalue.lo \
-	src/pana_parser_dict.lo
+	src/pana_parser_dict.lo src/pana_node.lo
 am__objects_2 =
 am_libpana_la_OBJECTS = $(am__objects_1) $(am__objects_2)
 libpana_la_OBJECTS = $(am_libpana_la_OBJECTS)
 PROGRAMS = $(noinst_PROGRAMS)
 am_pana_test1_OBJECTS = test/Test1.$(OBJEXT) test/user_db.$(OBJEXT)
 pana_test1_OBJECTS = $(am_pana_test1_OBJECTS)
-pana_test1_DEPENDENCIES = libpana.la \
-	$(top_srcdir)/libodutl/libodutl.la \
-	$(top_srcdir)/libeap/libeap.la \
-	$(top_srcdir)/libdiamparser/libdiamparser.la
+pana_test1_DEPENDENCIES = $(top_builddir)/libeap/libeap.la \
+	$(top_builddir)/libeap/libeaparchie.la \
+	$(top_builddir)/libpana/libpana.la \
+	$(top_builddir)/libodutl/libodutl.la
 am_pana_test2_OBJECTS = test/Test2.$(OBJEXT) test/user_db.$(OBJEXT)
 pana_test2_OBJECTS = $(am_pana_test2_OBJECTS)
-pana_test2_DEPENDENCIES = libpana.la \
-	$(top_srcdir)/libodutl/libodutl.la \
-	$(top_srcdir)/libeap/libeap.la \
-	$(top_srcdir)/libeap/libeaparchie.la \
-	$(top_srcdir)/libdiamparser/libdiamparser.la
+pana_test2_DEPENDENCIES = $(top_builddir)/libeap/libeap.la \
+	$(top_builddir)/libeap/libeaparchie.la \
+	$(top_builddir)/libpana/libpana.la \
+	$(top_builddir)/libodutl/libodutl.la
 am_pana_test3_OBJECTS = test/Test3.$(OBJEXT) test/user_db.$(OBJEXT)
 pana_test3_OBJECTS = $(am_pana_test3_OBJECTS)
-pana_test3_DEPENDENCIES = libpana.la \
-	$(top_srcdir)/libodutl/libodutl.la \
-	$(top_srcdir)/libeap/libeap.la \
-	$(top_srcdir)/libeap/libeaparchie.la \
-	$(top_srcdir)/libdiamparser/libdiamparser.la
+pana_test3_DEPENDENCIES = $(top_builddir)/libeap/libeap.la \
+	$(top_builddir)/libeap/libeaparchie.la \
+	$(top_builddir)/libpana/libpana.la \
+	$(top_builddir)/libodutl/libodutl.la
 DEFAULT_INCLUDES = -I. -I$(srcdir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -150,7 +148,6 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 F77 = @F77@
 FFLAGS = @FFLAGS@
-GREP = @GREP@
 HOST_OS = @HOST_OS@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -185,9 +182,12 @@ SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
 VERSION = @VERSION@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_F77 = @ac_ct_F77@
+ac_ct_RANLIB = @ac_ct_RANLIB@
+ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -206,30 +206,23 @@ build_vendor = @build_vendor@
 compile_EAPTLS_FALSE = @compile_EAPTLS_FALSE@
 compile_EAPTLS_TRUE = @compile_EAPTLS_TRUE@
 datadir = $(prefix)/share/opendiameter/doc/pana
-datarootdir = @datarootdir@
-docdir = @docdir@
-dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
-htmldir = @htmldir@
 includedir = $(prefix)/include/opendiameter/pana
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
-localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
-pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
-psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = $(prefix)/etc/opendiameter/pana
@@ -294,7 +287,8 @@ PANA_HDRS = include/pana_auth_script.h \
 
 PANA_SRC = src/pana_parser.cxx \
             src/pana_parser_avpvalue.cxx \
-            src/pana_parser_dict.cxx
+            src/pana_parser_dict.cxx \
+            src/pana_node.cxx
 
 include_HEADERS = $(PANA_HDRS)
 sysconf_DATA = config/config.xsd \
@@ -318,27 +312,25 @@ LDADD = @L_LIBS@ \
 	$(top_srcdir)/libodutl/libodutl.la
 
 pana_test1_SOURCES = test/Test1.cxx test/user_db.cxx
-pana_test1_LDADD = @L_LIBS@ \
-                   libpana.la \
-	           $(top_srcdir)/libodutl/libodutl.la \
-	           $(top_srcdir)/libeap/libeap.la \
-	           $(top_srcdir)/libdiamparser/libdiamparser.la
+pana_test1_LDADD = $(top_builddir)/libeap/libeap.la \
+		$(top_builddir)/libeap/libeaparchie.la \
+		$(top_builddir)/libpana/libpana.la \
+                $(top_builddir)/libodutl/libodutl.la \
+                @L_LIBS@
 
 pana_test2_SOURCES = test/Test2.cxx test/user_db.cxx
-pana_test2_LDADD = @L_LIBS@ \
-                   libpana.la \
-	           $(top_srcdir)/libodutl/libodutl.la \
-	           $(top_srcdir)/libeap/libeap.la \
-                   $(top_srcdir)/libeap/libeaparchie.la \
-	           $(top_srcdir)/libdiamparser/libdiamparser.la
+pana_test2_LDADD = $(top_builddir)/libeap/libeap.la \
+		$(top_builddir)/libeap/libeaparchie.la \
+		$(top_builddir)/libpana/libpana.la \
+                $(top_builddir)/libodutl/libodutl.la \
+                @L_LIBS@
 
 pana_test3_SOURCES = test/Test3.cxx test/user_db.cxx
-pana_test3_LDADD = @L_LIBS@ \
-                   libpana.la \
-	           $(top_srcdir)/libodutl/libodutl.la \
-	           $(top_srcdir)/libeap/libeap.la \
-                   $(top_srcdir)/libeap/libeaparchie.la \
-	           $(top_srcdir)/libdiamparser/libdiamparser.la
+pana_test3_LDADD = $(top_builddir)/libeap/libeap.la \
+		$(top_builddir)/libeap/libeaparchie.la \
+		$(top_builddir)/libpana/libpana.la \
+                $(top_builddir)/libodutl/libodutl.la \
+                @L_LIBS@
 
 pkginclude_HEADERS = test/user_db.h
 all: all-am
@@ -412,6 +404,7 @@ src/pana_parser_avpvalue.lo: src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
 src/pana_parser_dict.lo: src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
+src/pana_node.lo: src/$(am__dirstamp) src/$(DEPDIR)/$(am__dirstamp)
 libpana.la: $(libpana_la_OBJECTS) $(libpana_la_DEPENDENCIES) 
 	$(CXXLINK) -rpath $(libdir) $(libpana_la_LDFLAGS) $(libpana_la_OBJECTS) $(libpana_la_LIBADD) $(LIBS)
 
@@ -447,6 +440,8 @@ pana_test3$(EXEEXT): $(pana_test3_OBJECTS) $(pana_test3_DEPENDENCIES)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
+	-rm -f src/pana_node.$(OBJEXT)
+	-rm -f src/pana_node.lo
 	-rm -f src/pana_parser.$(OBJEXT)
 	-rm -f src/pana_parser.lo
 	-rm -f src/pana_parser_avpvalue.$(OBJEXT)
@@ -461,6 +456,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/pana_node.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/pana_parser.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/pana_parser_avpvalue.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/pana_parser_dict.Plo@am__quote@
